I have all the skeleton code now...